# mexhov-clipboard

./: CHANGELOG.md  LICENSE.md  README.md  UNSLOPPED.md  components.json  deno.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: CRYPTO.md  SRS.md
src/: app.tsx  bindings.ts  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard_monitor.rs  commands.rs  db.rs  main.rs  schema.rs  shortcuts.rs  tray.rs
src-tauri/src/caret/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/clipboard/: arboard.rs  image.rs  manager.rs  mod.rs  wayland.rs
src-tauri/src/cloud/: broadcast_local_change.rs  connect_relay.rs  emit_peer_count.rs  forward_decrypted_clipboard.rs  handle_key_exchange.rs  handle_key_exchange_ack.rs  handle_peer_joined.rs  handle_peer_left.rs  handle_relay_message.rs  mod.rs  peer_key.rs  receive_broadcast_clipboard.rs  receive_direct_clipboard.rs  relay_message.rs  run_event_loop.rs  spawn.rs  state.rs
src-tauri/src/commands/: clipboard.rs  db.rs  detection.rs  keyring.rs  media.rs  mod.rs  settings.rs  shortcuts.rs  sync.rs  system.rs  window.rs
src-tauri/src/commands/detection/: color.rs  date.rs  env.rs  mod.rs
src-tauri/src/crypto/: decode_pubkey.rs  decrypt.rs  derive_aes_key.rs  derive_shared_key.rs  encode_pubkey.rs  encrypt.rs  envelope.rs  generate_keypair.rs  handshake.rs  mod.rs  open_envelope.rs  seal_envelope.rs
src-tauri/src/db/: initialization.rs  items.rs  mod.rs  schema.rs  settings.rs
src-tauri/src/db/items/: delete.rs  hash.rs  insert.rs  mod.rs  query.rs  update.rs
src-tauri/src/db/utils/: mod.rs
src-tauri/src/detection/: color.rs  env.rs  file.rs  mod.rs  secret.rs
src-tauri/src/sync/: client.rs  cloud.rs  crypto.rs  mdns.rs  mod.rs  peer.rs  server.rs
src-tauri/src/window/: main_window.rs
src/components/: clipboard-empty-state.tsx  clipboard-error-banner.tsx  clipboard-filter-menu.tsx  clipboard-item-actions.tsx  clipboard-item-color.tsx  clipboard-item-content.tsx  clipboard-item-file.tsx  clipboard-item-meta.tsx  clipboard-item.tsx  clipboard-items-grid.tsx  clipboard-list.tsx  clipboard-tab.tsx  clipboard-window-header.tsx  color-format-menu.tsx  color-preview.tsx  gif-grid-item.tsx  gif-view.tsx  link-preview.tsx  quick-paste-badge.tsx  search-result-item.tsx  sortable-item.tsx  symbols-view.tsx
src/components/ui/: dialog.tsx  dropdown-menu.tsx  sheet.tsx  tabs.tsx
src/features/auth/better-auth-tauri/: NOTICE.md
src/features/auth/components/: magic-link-sign-in-form.tsx  sign-up-form.tsx
src/features/auth/hooks/: use-better-auth.ts
src/features/auth/lib/: better-auth-client.ts  handle-auth-deep-link-urls.ts  handle-auth-deep-link.ts  initialize-better-auth.ts  sign-out.ts
src/features/auth/schema/: magic-link-sign-in-schema.ts
src/features/auth/stores/: token-store.ts
src/features/clipboard/: build-image-clipboard-item.ts  build-text-clipboard-item.ts
src/features/clipboard/components/: clipboard-search-box.tsx  no-clipboard.tsx  no-matched-clipboard.tsx
src/features/clipboard/hooks/: use-add-clipboard-content-to-history.ts  use-clear-clipboard-history.ts  use-clipboard-history-query.ts  use-clipboard-history.ts  use-clipboard-list-hotkeys.ts  use-delete-clipboard-item.ts  use-has-clipboard-history.ts  use-reorder-clipboard-items.ts  use-split-clipboard-env-item.ts  use-toggle-clipboard-favorite.ts  use-update-clipboard-note.ts
src/features/clipboard/stores/: clipboard-monitoring-store.ts  clipboard-note-store.ts  clipboard-search-query-store.ts
src/features/clipboard/utils/: is-item-copied.ts
src/features/hotkey/: hotkey-actions.ts  hotkey-storage.ts
src/features/hotkey/hooks/: use-hotkeys-config.ts  use-modifier-held.ts
src/features/klipy/components/: gif-feed-empty.tsx  gif-feed-error.tsx  gif-feed-loading.tsx  gif-feed.tsx  gif-grid-item.tsx  gif-grid.tsx  gif-search-box.tsx  gif-view.tsx
src/features/klipy/hooks/: use-klipy-feed.ts  use-klipy-search.ts  use-klipy-trending.ts  use-klipy.ts  use-quick-paste-hotkeys.ts  use-scroll-viewport.ts
src/features/klipy/masonry/: compute-masonry-layout.ts  masonry-types.ts  pick-preview-format.ts  select-visible-cells.ts  shortest-column-index.ts
src/features/klipy/schema/: klipy-category-response.ts  klipy-category.ts  klipy-file.ts  klipy-media.ts  klipy-response.ts  klipy-static.ts  klipy.ts
src/features/klipy/stores/: gif-search-query-store.ts
src/features/klipy/utils/: build-quick-index-by-slug.ts  klipy-client.ts  klipy-error-message.ts  klipy-url.ts  pick-thumbnail-source.ts
src/features/preferences/: general-settings.tsx  hotkey-row.tsx  hotkeys-settings.tsx  setting-row.tsx  settings-sheet.tsx
src/features/preferences/components/: general-settings.tsx  hotkey-row.tsx  hotkeys-settings.tsx  settings-sheet-body.tsx  settings-sheet.tsx
src/features/preferences/sync/: sync-cloud-connect.tsx  sync-lan-connect.tsx  sync-lan-server-card.tsx  sync-settings.tsx  use-discovered-devices.ts  use-sync.ts
src/features/subscription/components/: manage-subscription-button.tsx  pricing-and-plans.tsx
src/features/symbols/components/: symbols-search-box.tsx
src/features/symbols/stores/: symbols-search-query-store.ts
src/features/sync/components/: connect-to-server-button.tsx  sync-cloud-connect.tsx  sync-dashboard.tsx  sync-lan-connect.tsx  sync-lan-server-card.tsx  sync-settings.tsx  sync-status-indicator.tsx
src/features/sync/hooks/: use-discovered-devices.ts  use-sync.ts
src/features/tab/hooks/: use-tabs.ts
src/hooks/: clipboard-enrichment.ts  clipboard-split-env.ts  use-clipboard-db.ts  use-clipboard-filters.ts  use-clipboard-history.ts  use-clipboard-monitor.ts  use-clipboard.ts  use-draggable-media.ts  use-hotkeys-config.ts  use-klipy.ts  use-paste-actions.ts  use-settings.ts  use-system-info.ts  use-system-theme.ts
src/lib/: symbol-data.ts
src/types/: clipboard.ts
src/utils/: color.ts  formatting.ts
(+8 files in other folders)
