[package]
name = "mexc"
version = "1.2.0"
description = "Mexhov Clipboard"
authors = ["Sokhuong of Mexdehor"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mexc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3.3"
tokio = { version = "1", features = ["time"] }
png = "0.17"
base64 = "0.22"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
scraper = "0.22"
url = "2"
chrono = "0.4"
csscolorparser = "0.8"
sha2 = "0.10"
tauri-plugin-opener = "2"
drizzle = { git = "https://github.com/themixednuts/drizzle-rs", features = ["rusqlite"] }
rusqlite = { version = "0.37", features = ["bundled"] }
tauri-plugin-drag = "2.1.0"
image = "0.25.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
