[package]
name = "mexboard"
version = "1.21.0"
description = "Mexboard"
authors = ["Sokhuong of Mexdehor"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mexboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

arboard = { version = "3.3", features = ["wayland-data-control"] }

tokio = { version = "1", features = ["time", "net", "sync", "macros", "process"] }
tokio-tungstenite = "0.29"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

specta = { version = "=2.0.0-rc.24" }
tauri-specta = { version = "=2.0.0-rc.24", features = ["typescript"] }
specta-typescript = { version = "=0.0.11" }

png = "0.17"
base64 = "0.22"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
scraper = "0.22"
url = "2"
chrono = "0.4"
csscolorparser = "0.8"
sha2 = "0.10"
drizzle = { git = "https://github.com/themixednuts/drizzle-rs", features = ["rusqlite"] }
rusqlite = { version = "0.37", features = ["bundled"] }
image = "0.25.10"
enigo = { version = "0.6", features = ["wayland", "x11rb"] }
hostname = "0.4.2"
network-interface = "2.0.5"
aes-gcm = "0.10.3"
rand = "0.10.0"
argon2 = "0.5.3"
x25519-dalek = "3.0.0-pre.6"
mdns-sd = "0.18"
secretscan = "0.2"
keyring-core = "1"

tauri-plugin-drag = "2.1.0"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2.3.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["blocking"] }
wl-clipboard-rs = "0.9"
zbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
] }
windows = { version = "0.62.2", features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_Foundation",
] }
windows-native-keyring-store = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
apple-native-keyring-store = { version = "1", features = ["keychain"] }
